06-host-based/httproute-hostbased.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: host-based-route
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "app1.local"
    - "app2.local"
  rules:
    - matches:
        - headers:
            - name: host
              value: app1.local
      backendRefs:
        - name: app1-service
          port: 80

    - matches:
        - headers:
            - name: host
              value: app2.local
      backendRefs:
        - name: app2-service
          port: 80
